GNOME Bugzilla – Bug 669960
cannot set bmp as desktop background (and no reason given)
Last modified: 2012-05-17 17:13:07 UTC
Forwarded from https://bugs.launchpad.net/ubuntu/+source/gnome-control-center/+bug/927302 - Open the Background panel of the GNOME control center. - click on the "+" sign on the bottom to add another wallpaper - browse and select some bmp file expected: the file should be added and you should be able to select it as a background (this happens with jpg files) observed: the file browser closes but the file is not added. No error message is given If the bmp file format is not supported (which I don't see why it shouldn't be) or if anything is wrong with the file itself, an error message should be given.
commit 3d79e1174e7287f29ad630a4aea55cfa0a6d2b2a Author: Bastien Nocera <hadess@hadess.net> Date: Thu May 17 18:12:13 2012 +0100 background: Only show the image types we support And add image/bmp to those types. https://bugzilla.gnome.org/show_bug.cgi?id=669960