background: Only show the image types we support

And add image/bmp to those types.

https://bugzilla.gnome.org/show_bug.cgi?id=669960